--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.21.0",
     "joi": "^17.9.2",
     "joi-browser": "^13.4.0",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
