--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,9 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "node-fetch": "^3.3.1",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
