--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-easy-crop": "^4.7.4",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "stripe": "^12.5.0",
     "web-vitals": "^2.1.4"
   },
